[package]
name = "arso_exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
lazy_static = "1.4.0"
prometheus = { version = "0.13.3", features = ["process"] }
reqwest = { version = "0.11.13", features = ["blocking"] }
scraper = "0.14.0"
thiserror = "1.0.38"
tokio = { version = "1.24.0", features = ["full"] }
