[package]
name = "arso_exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
config = "0.13.3"
once_cell = "1.17.0"
prometheus = { version = "0.13.3", features = ["process"] }
reqwest = { version = "0.11.14", features = ["blocking"] }
scraper = "0.14.0"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
